force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>Represents a request for volunteer service</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>