force-app/main/default/objects/Service_Request__c/fields/Assigned_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The volunteer assigned to fulfill this request</description>
    <label>Assigned Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assigned Service Requests</relationshipLabel>
    <relationshipName>Assigned_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>