force-app/main/default/objects/Service_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the service requested</description>
    <inlineHelpText>Provide a detailed description of the service you are requesting</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>