force-app/main/default/objects/Service_Request__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>The date when the service is requested</description>
    <label>Requested Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>