force-app/main/default/objects/Service_Request__c/fields/Skill_Needed__c.field-meta.xml
<CustomField>
    <fullName>Skill_Needed__c</fullName>
    <description>The skill needed for this service request</description>
    <label>Skill Needed</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>